{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 148,
  "lineage": "11ea8748-d8a1-14ce-aed7-ff8d2b7e114d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b3ebe6cf789367f",
            "arn": "arn:aws:ec2:us-east-1:259661441422:elastic-ip/eipalloc-09b3ebe6cf789367f",
            "association_id": "eipassoc-02fd36cdb06034c18",
            "domain": "vpc",
            "id": "eipalloc-09b3ebe6cf789367f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-096d13c518d4cbde5",
            "private_dns": "ip-10-0-1-160.ec2.internal",
            "private_ip": "10.0.1.160",
            "public_dns": "ec2-3-222-153-185.compute-1.amazonaws.com",
            "public_ip": "3.222.153.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "edsteward-nat-eip-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059ae173b16699cd8",
            "arn": "arn:aws:ec2:us-east-1:259661441422:elastic-ip/eipalloc-059ae173b16699cd8",
            "association_id": "eipassoc-0dbf341c10fc59a50",
            "domain": "vpc",
            "id": "eipalloc-059ae173b16699cd8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b98dc3711bb7ccba",
            "private_dns": "ip-10-0-2-125.ec2.internal",
            "private_ip": "10.0.2.125",
            "public_dns": "ec2-100-24-231-55.compute-1.amazonaws.com",
            "public_ip": "100.24.231.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "edsteward-nat-eip-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:internet-gateway/igw-0f7fbdc1372f1c769",
            "id": "igw-0f7fbdc1372f1c769",
            "owner_id": "259661441422",
            "tags": {
              "Environment": "production",
              "Name": "edsteward-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-igw"
            },
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:259661441422:loadbalancer/app/edsteward-alb/40981ad9c07a3a8f",
            "arn_suffix": "app/edsteward-alb/40981ad9c07a3a8f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "edsteward-alb-554701445.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:259661441422:loadbalancer/app/edsteward-alb/40981ad9c07a3a8f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "edsteward-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05e946256774c2ae8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04327a914c9ef541b"
              },
              {
                "subnet_id": "subnet-0dd14e0f845d0ed6e"
              }
            ],
            "subnets": [
              "subnet-04327a914c9ef541b",
              "subnet-0dd14e0f845d0ed6e"
            ],
            "tags": {
              "Environment": "production",
              "Name": "edsteward-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-alb"
            },
            "vpc_id": "vpc-08e725354dc2ff83e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:259661441422:listener/app/edsteward-alb/40981ad9c07a3a8f/f0cb5340ba071dba",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:259661441422:targetgroup/edsteward-tg/eef6c92f1f7c5e69",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:259661441422:listener/app/edsteward-alb/40981ad9c07a3a8f/f0cb5340ba071dba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:259661441422:loadbalancer/app/edsteward-alb/40981ad9c07a3a8f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:259661441422:listener/app/edsteward-alb/40981ad9c07a3a8f/ba45bcbeff0ae834",
            "certificate_arn": "arn:aws:acm:us-east-1:259661441422:certificate/f83b644a-7476-444b-b7be-e45001680e79",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:259661441422:targetgroup/edsteward-tg/eef6c92f1f7c5e69",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:259661441422:listener/app/edsteward-alb/40981ad9c07a3a8f/ba45bcbeff0ae834",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:259661441422:loadbalancer/app/edsteward-alb/40981ad9c07a3a8f",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.main",
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:259661441422:targetgroup/edsteward-tg/eef6c92f1f7c5e69",
            "arn_suffix": "targetgroup/edsteward-tg/eef6c92f1f7c5e69",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:259661441422:targetgroup/edsteward-tg/eef6c92f1f7c5e69",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:259661441422:loadbalancer/app/edsteward-alb/40981ad9c07a3a8f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "edsteward-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "edsteward-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b3ebe6cf789367f",
            "association_id": "eipassoc-02fd36cdb06034c18",
            "connectivity_type": "public",
            "id": "nat-0d71ad013ea331c81",
            "network_interface_id": "eni-096d13c518d4cbde5",
            "private_ip": "10.0.1.160",
            "public_ip": "3.222.153.185",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dd14e0f845d0ed6e",
            "tags": {
              "Environment": "production",
              "Name": "edsteward-nat-gateway-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059ae173b16699cd8",
            "association_id": "eipassoc-0dbf341c10fc59a50",
            "connectivity_type": "public",
            "id": "nat-0706ad006f8c2d888",
            "network_interface_id": "eni-0b98dc3711bb7ccba",
            "private_ip": "10.0.2.125",
            "public_ip": "100.24.231.55",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04327a914c9ef541b",
            "tags": {
              "Environment": "production",
              "Name": "edsteward-nat-gateway-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-nat-gateway-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:route-table/rtb-033c10e26a9264deb",
            "id": "rtb-033c10e26a9264deb",
            "owner_id": "259661441422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d71ad013ea331c81",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "edsteward-private-rt-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:route-table/rtb-02eabba28f042c9d9",
            "id": "rtb-02eabba28f042c9d9",
            "owner_id": "259661441422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0706ad006f8c2d888",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "edsteward-private-rt-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:route-table/rtb-00721423b414bb664",
            "id": "rtb-00721423b414bb664",
            "owner_id": "259661441422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7fbdc1372f1c769",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "edsteward-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f708ae412021fc0",
            "route_table_id": "rtb-033c10e26a9264deb",
            "subnet_id": "subnet-0105fe0ce653c3028"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b223e4375496068e",
            "route_table_id": "rtb-02eabba28f042c9d9",
            "subnet_id": "subnet-0bc514aab497f4027"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae311ecc3995535f",
            "route_table_id": "rtb-00721423b414bb664",
            "subnet_id": "subnet-0dd14e0f845d0ed6e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083b30c2c135a55b5",
            "route_table_id": "rtb-00721423b414bb664",
            "subnet_id": "subnet-04327a914c9ef541b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:security-group/sg-05e946256774c2ae8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e946256774c2ae8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "edsteward-alb-20250611141909985600000004",
            "name_prefix": "edsteward-alb-",
            "owner_id": "259661441422",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "edsteward-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:security-group/sg-05d224df33d970f0c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d224df33d970f0c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e946256774c2ae8"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "edsteward-ecs-20250611141912777600000006",
            "name_prefix": "edsteward-ecs-",
            "owner_id": "259661441422",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "edsteward-ecs-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:security-group/sg-0a43f791ccea6fc34",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a43f791ccea6fc34",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d224df33d970f0c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "edsteward-rds-20250611141915129300000008",
            "name_prefix": "edsteward-rds-",
            "owner_id": "259661441422",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "edsteward-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:security-group/sg-0ca110b5c4ad239e4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ca110b5c4ad239e4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d224df33d970f0c"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "edsteward-redis-20250611141915129000000007",
            "name_prefix": "edsteward-redis-",
            "owner_id": "259661441422",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "edsteward-redis-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:subnet/subnet-0105fe0ce653c3028",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0105fe0ce653c3028",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "259661441422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "edsteward-private-subnet-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-private-subnet-1",
              "Type": "private"
            },
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:subnet/subnet-0bc514aab497f4027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc514aab497f4027",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "259661441422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "edsteward-private-subnet-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-private-subnet-2",
              "Type": "private"
            },
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:subnet/subnet-0dd14e0f845d0ed6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd14e0f845d0ed6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "259661441422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "edsteward-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-public-subnet-1",
              "Type": "public"
            },
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:subnet/subnet-04327a914c9ef541b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04327a914c9ef541b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "259661441422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "edsteward-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-public-subnet-2",
              "Type": "public"
            },
            "vpc_id": "vpc-08e725354dc2ff83e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:259661441422:vpc/vpc-08e725354dc2ff83e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f7e132f11c8de2b",
            "default_route_table_id": "rtb-0454e60b7de1d53ec",
            "default_security_group_id": "sg-08d91fe29fa819e59",
            "dhcp_options_id": "dopt-0fe489492fca41ccd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e725354dc2ff83e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0454e60b7de1d53ec",
            "owner_id": "259661441422",
            "tags": {
              "Environment": "production",
              "Name": "edsteward-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edsteward-vpc"
            }
          }
        }
      ]
    }
  ]
}